--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 
     const checklistItems = [
         "Kalender Pendidikan", "Program Tahunan", "Program Semester",
-        "Silabus / ATP", "RPP / Modul Ajar", "Jadwal Pelajaran",
+        "CP / ATP", "RPP / Modul Ajar", "Jadwal Pelajaran",
         "Buku Absensi Siswa", "Buku Daftar Nilai", "KKM / KKTP",
-        "Buku Agenda Guru", "Analisis Hasil Evaluasi", "Program Perbaikan & Pengayaan"
+        "Buku Agenda Guru", "Soal UH","Analisis Hasil Evaluasi", "Program Perbaikan & Pengayaan"
     ];
 
     const select = document.getElementById('guru-select');
